--- a/src/app/views/news/news.ejs
+++ b/src/app/views/news/news.ejs
@@ -59,7 +59,7 @@
                 <form action="/product" method="post" class="card-body">
                     <h3 class="cart-title">add asin</h3>
                     <div class="form-group">
-                        <input type="text" name="asin" class="form-control" placeholder="ASIN">
+                        <input type="text" name="asin_code" class="form-control" placeholder="ASIN">
                     </div>
                     <input type="submit" class="col-md-6 btn btn-primary">
                 </form>
