--- a/src/app/views/news/news.ejs
+++ b/src/app/views/news/news.ejs
@@ -42,7 +42,7 @@
                     <input type="submit" class="col-md-3 btn btn-dark" value="Validar todos">
                 </form>
                 <form action="/downloadexcel" method="post" class="card-body">
-                    <input type="submit" class="col-md-3 btn btn-dark" value="Descargar CSV">
+                    <input type="submit" class="col-md-3 btn btn-dark" value="Descargar excel">
                 </form>
             </div>
             <div class="table-responsive">
